--- a/index.html
+++ b/index.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Background Image Example</title>
-  <style>
-    /* Desktop styles */
-    body {
-      background-image: url('https://raw.githubusercontent.com/djveryvn102/pr0djj/main/logo-playdj-com-convert.png');
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-    
-    /* Mobile styles */
-    @media only screen and (max-width: 767px) {
-      body {
-        background-image: url('https://raw.githubusercontent.com/djveryvn102/pr0djj/main/logo-playdj-com-convert.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
-    }
-  </style>
+    <title>Responsive Background Image</title>
+    <style type="text/css">
+        body {
+            background: url('https://cdn.play.dj/4/items/8ecf39fb02bd311cd04c72d89cbfb6d7/PlayDJ%20%28%203D%20%29%20%2B%20Slogan.jpg') no-repeat center center fixed;
+            background-size: 50%;
+        }
+    </style>
 </head>
 <body>
-  <!-- Nội dung trang web tại đây -->
+    <!-- your content here -->
 </body>
 </html>
