--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Responsive Background Image</title>
+    <title>PRO.DJ: MUSIC DJ ONLINE THE MIXER 2023</title>
+    <link rel="canonical" href="https://pro.dj/" />
+<meta name="Author" content="Pro.DJ">
+<meta name="Keywords" content="Mix, Nonstop, Music, DJ, Dance, Nonstop, Electro, REMIX, 2023">
+<meta name="Description" content="EDM, DJ, ONLINE, Dance, Music, REMIX, Live, Chill, Vinahey, 2023">
     <style type="text/css">
         body {
             background: url('https://cdn.play.dj/4/items/8ecf39fb02bd311cd04c72d89cbfb6d7/PlayDJ%20%28%203D%20%29%20%2B%20Slogan.jpg') no-repeat center center fixed;
