--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="Description" content="EDM, DJ, ONLINE, Dance, Music, REMIX, Live, Chill, Vinahey, 2023">
     <style type="text/css">
         body {
-            background: url('https://cdn.play.dj/4/items/8ecf39fb02bd311cd04c72d89cbfb6d7/PlayDJ%20%28%203D%20%29%20%2B%20Slogan.jpg') no-repeat center center fixed;
+            background: url('https://cdn-play-dj.cdn.ampproject.org/i/s/cdn.play.dj/4/items/8ecf39fb02bd311cd04c72d89cbfb6d7/PlayDJ%20%28%203D%20%29%20%2B%20Slogan.jpg') no-repeat center center fixed;
             background-size: 50%;
         }
     </style>
