--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PRO.DJ: MUSIC DJ ONLINE THE MIXER 2023</title>
+    <title>Pro.DJ &#187; Music DJ Online The Mixer 2023</title>
     <link rel="canonical" href="https://pro.dj/" />
 <meta name="Author" content="Pro.DJ">
 <meta name="Keywords" content="Mix, Nonstop, Music, DJ, Dance, Nonstop, Electro, REMIX, 2023">
