--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Pro.DJ &#187; Music DJ Online The Mixer 2023</title>
     <link rel="canonical" href="https://pro.dj/" />
 <meta name="Author" content="Pro.DJ">
-<meta name="Keywords" content="Mix, Nonstop, Music, DJ, Dance, Nonstop, Electro, REMIX, 2023">
+<meta name="Keywords" content="Mix, Nonstop, Music, DJ, Dance, Electro, REMIX, 2023">
 <meta name="Description" content="EDM, DJ, ONLINE, Dance, Music, REMIX, Live, Chill, Vinahey, 2023">
     <style type="text/css">
         body {
