--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Pro.DJ &#187; Music DJ Online The Mixer 2023</title>
+    <link rel="shortcut icon"type="image/x-icon"href="https://pro.dj/favicon.ico"/>
     <link rel="canonical" href="https://pro.dj/" />
 <meta name="Author" content="Pro.DJ">
 <meta name="Keywords" content="Mix, Nonstop, Music, DJ, Dance, Electro, REMIX, 2023">
